<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.autokartz.autokartz.activities.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mar_10"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginTop="@dimen/mar_20"
                android:layout_marginRight="@dimen/mar_10"
                android:selectAllOnFocus="true">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginRight="@dimen/mar_10">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginRight="@dimen/mar_10">

                <EditText

                    android:id="@+id/et_phonenumeber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginRight="@dimen/mar_10">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginRight="@dimen/mar_10">

                <EditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginTop="@dimen/mar_50"
                android:layout_marginRight="@dimen/mar_10"
                android:background="@color/colorAccent"
                android:text="@string/signup"
                android:textColor="@color/White"
                android:textSize="@dimen/textSize14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_10"
                android:layout_marginBottom="@dimen/mar_20"
                android:text="@string/already_has_an_account"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSize16sp" />

            <TextView
                android:id="@+id/tv_loginhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mar_30"
                android:text="@string/login_here"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSize16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>