<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/LightGray"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/mar_50"
                android:src="@drawable/klicon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_20"
                android:orientation="vertical"
                android:padding="@dimen/mar_10">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mar_10"
                    android:layout_marginRight="@dimen/mar_10">

                    <EditText
                        android:id="@+id/et_emaillogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mar_10"
                    android:layout_marginRight="@dimen/mar_10"
                    app:passwordToggleContentDescription="dadad"
                    app:passwordToggleDrawable="@drawable/toggle"
                    app:passwordToggleEnabled="true"

                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_passwordlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mar_10"
                    android:layout_marginTop="@dimen/mar_50"
                    android:layout_marginRight="@dimen/mar_10"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:background="@color/WhiteSmoke"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/mar_10"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="@dimen/mar_20"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mar_10"
                    android:layout_marginTop="@dimen/mar_10"
                    android:layout_marginRight="@dimen/mar_10"
                    android:layout_marginBottom="@dimen/mar_30"
                    android:text="@string/signup"
                    android:background="@color/colorAccent"
                    android:textColor="@color/White"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textSize18sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>